--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.0.0",
     "less-loader": "^8.0.0",
     "mini-css-extract-plugin": "^1.3.5",
