--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:serve": "webpack serve --open --config webpack.config.dev.js",
+    "dev:serve": "webpack serve --open --config webpack.config.dev.js --host 0.0.0.0",
     "dev": "rm -rf dist && webpack --watch --config webpack.config.dev.js",
     "build": "NODE_ENV=production webpack  --config webpack.config.prod.js"
   },
